spade-tests/src/snapshots/spade_tests__typeinference__good_error_message_for_let_pattern_type_mismatch_with_implicit_type.snap
---
source: spade-tests/src/typeinference.rs
---
entity test(clk: clock) -> bool {
    let (x, y) = true;

    true
}


error: Pattern type mismatch. Expected bool got (_, _)
  ┌─ testinput:2:9
  │
2 │     let (x, y) = true;
  │         ^^^^^^   ---- because this has type bool
  │         │         
  │         expected bool, got (_, _)
  │
  = note: Expected: bool
               Got: (_, _)


